# proxy

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  README.md  docker-compose.yml  makefile  rust-toolchain.toml
.docker/: Dockerfile
.github/workflows/: release.yml
.zed/: settings.json  tasks.json
example/: example.toml
src/: config.rs  error.rs  main.rs  utils.rs
src/core/: mod.rs  setup.rs
src/core/handlers/: certs.rs  filesystem.rs  mod.rs  proxy.rs
src/core/models/: certs.rs  filesystem.rs  mod.rs  proxy.rs  routes.rs  tasks.rs
